namespace LearnEasyOnline.Api.Data
{
    public class Course
    {
        public int Id { get; set; }
        public string Title { get; set; }
        public string Description { get; set; }
        public decimal? Price { get; set; }
        public string? Content { get; set; }
    }
}
